--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Ejemplo de git</h1>
+
+    <input type="text" name="nombre" id="nombre">
+    <input type="button">
 </body>
 </html>
